2004-01-29  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-gnutls.c (verify_certificate): Initialize the
	certificate before we try to use it.  Ahem.

2004-01-23  Joe Shaw  <joe@ximian.com>

	* configure.in: Bump version to 2.1.5 and SOUP_RELEASE to 2

2004-01-21  Joe Shaw  <joe@ximian.com>

	* configure.in: Require at least GnuTLS 1.0.0.

	* libsoup/soup-gnutls.c: Fix the use of deprecated GnuTLS
	functions.
	(verify_certificate): Use gnutls_x509_crt_import() and
	gnutls_x509_crt_check_hostname() instead of
	gnutls_x509_check_certificates_hostname().
	(init_dh_params): Use gnutls_dh_params_generate2() instead of
	gnutls_dh_params_generate() and gnutls_dh_params_set().

2004-01-20  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-gnutls.c (soup_gnutls_close): gnutls_bye() doesn't
	close the socket itself, so we need to do it or else our
	connections stay in CLOSE_WAIT forever.

2004-01-16  Jason Leach  <leach@wam.umd.edu>

	* libsoup/Makefile.am: builddir != srcdir fixes.

2004-01-14  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-gnutls.c (verify_certificate): Remove the
	check for GNUTLS_CERT_CORRUPTED, it's not in 1.0.x.

2004-01-12  JP Rosevear  <jpr@ximian.com>

	* configure.in: bump version and libtool revision

2004-01-12  Dan Winship  <danw@ximian.com>

	* tests/simple-httpd.c (main): Add a g_thread_init() so this works
	again.

2004-01-10  Larry Ewing  <lewing@ximian.com>

	* libsoup-2.2.pc.in (Libs): use LIBGNUTLS_LIBS in the substitution
	string.

2004-01-09  Joe Shaw  <joe@ximian.com>

	* acinclude.m4: Include the libgnutls.m4 file.

	* configure.in: Remove manual checking for libgnutls-config and
	use the AM_PATH_LIBGNUTLS so we can pass in a minimum required
	version, which is 0.9.7 for now.

	* libsoup/Makefile.am: Some changes for the above change.

	* libsoup/soup-gnutls.c: Check for HAVE_SSL, not
	HAVE_GNUTLS_GNUTLS_H.
	(verify_certificate): Uncomment the SSL certificate hostname
	check.

	* libsoup/soup-session.c (set_property): Be smart about flushing