@@ -1,3 +1,9 @@
+2004-01-29  Rodrigo Moya <rodrigo@ximian.com>
+
+	* libsoup/soup-soap-response.[ch]
+	(soup_soap_parameter_get_string_value): removed 'const' from return
+	type.
+
 2004-01-29  Joe Shaw  <joe@ximian.com>
 
 	* libsoup/soup-gnutls.c (verify_certificate): Initialize the
